Closed Bug 1532366 Opened 6 years ago Closed 6 years ago

Crash in [@ RecordReplayInterface_InternalBeginOrderedAtomicAccess]

Categories

(Core Graveyard :: Web Replay, defect)

Unspecified
macOS
defect
Not set
critical

Tracking

(firefox-esr60 unaffected, firefox65 wontfix, firefox66 wontfix, firefox67 fixed)

RESOLVED FIXED
mozilla67
Tracking Status
firefox-esr60 --- unaffected
firefox65 --- wontfix
firefox66 --- wontfix
firefox67 --- fixed

People

(Reporter: marcia, Assigned: bhackett1024)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

This bug is for crash report bp-8202b302-0972-4435-beee-9fa350190304.

Seen while looking at nightly crash stats: https://bit.ly/2TcdQ6Z. 2 crashes recently, both in 10.14

I think Bug 1488808 touched code in this area a while back.

Top 10 frames of crashing thread:

0 XUL RecordReplayInterface_InternalBeginOrderedAtomicAccess toolkit/recordreplay/Thread.h:384
1 XUL js::frontend::CreateScriptSourceObject mfbt/RecordReplay.h:397
2 XUL SelfHostingScriptSourceObject js/src/vm/SelfHosting.cpp:3192
3 XUL JSRuntime::cloneSelfHostedFunctionScript js/src/vm/SelfHosting.cpp:3385
4 XUL JSFunction::createScriptForLazilyInterpretedFunction js/src/vm/JSFunction.cpp:1692
5 XUL Interpret js/src/vm/JSFunction.h:540
6 XUL js::RunScript js/src/vm/Interpreter.cpp:420
7 XUL js::InternalCallOrConstruct js/src/vm/Interpreter.cpp:560
8 XUL JS_CallFunctionValue js/src/vm/Interpreter.cpp:603
9 XUL nsXPCWrappedJSClass::CallMethod js/xpconnect/src/XPCWrappedJSClass.cpp:993

Brian, could you please look at this bug report?

Honza

Flags: needinfo?(bhackett1024)
Pushed by bhackett@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/01a347dc3993 Don't record changes to ScriptSource atomic counter, r=loganfsmyth.
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla67
Assignee: nobody → bhackett1024
Flags: needinfo?(bhackett1024)
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: