Bug 1532366 - Don't record changes to ScriptSource atomic counter, r=loganfsmyth.

Differential Revision: https://phabricator.services.mozilla.com/D22309